k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumesafe
  labels:
    app: consumesafe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: consumesafe
  template:
    metadata:
      labels:
        app: consumesafe
    spec:
      containers:
        - name: consumesafe
          image: riadh2002/consume-safe:IMAGE_TAG_PLACEHOLDER
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "250m"
              memory: "256Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
