k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumesafe-service
spec:
  type: ClusterIP
  selector:
    app: consumesafe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
